current SVN:

* Update to GDB 7.9.

version 0.1.12:

* Fixed library builds with binary releases.
* Update to musl 1.1.8.

version 0.1.11:

* Added aarch64 support.
* Update to musl 1.1.7.
* Update to LLVM r232721.

version 0.1.10:

* Updated the compiler-rt build rules.
* Added support for building Cortex-M3 libraries and programs.
* Added missing clang include files.

version 0.1.9:

* Build for Windows using ecc/mingw-w64.
* Update to LLVM r227686.
* Added write example.
* Added missing MinGW libraries to repository.
* Removed extraneous utmpx.c from the musl sources.

version 0.1.8:

* Support for MinGW-w64 compilation.
* Update to QEMU 2.2.0.
* Update to binutils 2.25.
* Update to musl 1.1.6.
* Update to LLVM r226372.
* Added support for using ELLCC to build for Windows using MinGW runtime.
* Added AF_INET socket ioctl() handling for interfaces.

version 0.1.7:

* Update to LLVM r225133.
* Integrated LwIP with the ELK virtual file system.
* Added AF_UNIX (AF_LOCAL) SOCK_STREAM support and socketpair().
* Implemented a per-process brk pointer and brk handling.
* Preallocate the kernel heap in MMU systems.
* Added LWIP to the ELK build.

version 0.1.6:

* Update to LLVM r224766.
* Fixed thread spawn memory leak.
* Cleaned up tty driver interrupt handling.
* Added a threading example to ELK examples.
* Updated ELK context switching to not rely on usr stack.

version 0.1.5:

* Added sigprocmask() to ELK.
* Added chroot() to ELK.
* Update to LLVM r223372.
* ELK can run in MMU and non-MMU configurations.
* Added an example of using ELK as a bootstrap program.
* Implemented mmap(), etc. in ELK.
* Added paged based kernel memory management to ELK.
* Support for user space programs in kernal space (e.g. ls, cat).
* Added lazy vnode R/W access to ELK.
* Added a FIFO file system to ELK.
* Added a bunch of ELK system calls for accessing the file system.
* Added a RAM file system to ELK.
* Added a virtual file system to ELK.
* Added a device file system to ELK.